# comfio

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  GUIDE.md  LICENSE  README.md  TESTS.md  build_walkthrough_md.py  build_walkthrough_nb.py  docs-requirements.txt  extract_outputs.py  mkdocs.yml  notebook_outputs.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
docs/: guide.md  index.md
docs/how_to/: custom_weighting_schemas.md  export_to_blockchain_oracle.md  handling_missing_sensor_data.md  index.md  integrate_llm_tools.md  train_personalisation.md  use_tsv_augmentation.md
docs/reference/: data_handler.md  index.md  integration.md  llm_tools.md  logging.md  ml_adapters.md  performance.md  result_base.md  validation.md  weather.md
docs/reference/domains/: acoustic.md  iaq.md  iaq_pollutants.md  thermal.md  thermal_adaptive.md  thermal_local.md  thermal_personal.md  thermal_spmv.md  thermal_tsv.md  visual.md
docs/theory/: adaptive_comfort.md  co2_decay_ventilation.md  index.md  limitations.md  local_discomfort.md  pollutant_iaq_thresholds.md  spmv_buratti.md  thermal_pmv_ppd.md  tsv_cdf_remapping.md  weakest_link_aggregation.md
docs/tutorials/: 04_llm_diagnostics.ipynb  05_advanced_domains.ipynb  06_walkthrough.md  index.md
examples/: advanced_domains_tutorial.ipynb  advanced_domains_tutorial.py  advanced_domains_tutorial_executed.ipynb  contracts_ml_tutorial.ipynb  contracts_ml_tutorial_executed.ipynb  llm_tutorial.ipynb  llm_tutorial_executed.ipynb  new_domains_tutorial.py  simple_tutorial.ipynb  simple_tutorial.py  simple_tutorial_executed.ipynb
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/guide/: index.html
latest/how_to/: index.html
latest/how_to/custom_weighting_schemas/: index.html
latest/how_to/export_to_blockchain_oracle/: index.html
latest/how_to/handling_missing_sensor_data/: index.html
latest/how_to/integrate_llm_tools/: index.html
latest/how_to/train_personalisation/: index.html
latest/how_to/use_tsv_augmentation/: index.html
latest/reference/: index.html
latest/reference/data_handler/: index.html
latest/reference/integration/: index.html
latest/reference/llm_tools/: index.html
latest/reference/logging/: index.html
latest/reference/ml_adapters/: index.html
latest/reference/performance/: index.html
latest/reference/result_base/: index.html
latest/reference/validation/: index.html
latest/reference/weather/: index.html
latest/search/: search_index.json
latest/stylesheets/: extra.css
latest/theory/: index.html
latest/theory/adaptive_comfort/: index.html
latest/theory/co2_decay_ventilation/: index.html
latest/theory/limitations/: index.html
latest/theory/local_discomfort/: index.html
latest/theory/pollutant_iaq_thresholds/: index.html
latest/theory/spmv_buratti/: index.html
latest/theory/thermal_pmv_ppd/: index.html
latest/theory/tsv_cdf_remapping/: index.html
latest/theory/weakest_link_aggregation/: index.html
latest/tutorials/: index.html
latest/tutorials/01_first_contract/: 01_first_contract.ipynb  index.html
latest/tutorials/02_new_domains/: 02_new_domains.ipynb  index.html
latest/tutorials/03_training_pcm/: 03_training_pcm.ipynb  index.html
latest/tutorials/04_llm_diagnostics/: index.html
latest/tutorials/05_advanced_domains/: index.html
latest/tutorials/06_walkthrough/: index.html
src/comfio/: __init__.py  logging_config.py
tests/: conftest.py  test_logging.py
tests/test_core/: test_data_handler.py  test_result_base.py
tests/test_domains/: test_acoustic.py  test_acoustic_advanced.py  test_iaq.py  test_iaq_advanced.py  test_iaq_pollutants.py  test_thermal.py  test_thermal_adaptive.py  test_thermal_local.py  test_thermal_personal.py  test_thermal_spmv.py  test_thermal_tsv.py  test_visual.py  test_visual_advanced.py
tests/test_integration/: test_global_ieq.py  test_global_ieq_new.py  test_weather.py
tests/test_llm/: test_interpreters.py  test_prompts.py  test_tools.py
tests/test_ml/: test_keras.py  test_sklearn.py  test_torch.py
tests/test_performance/: test_contracts.py
tests/test_utils/: test_units.py  test_validation.py
(+52 files in other folders)
